<resources>
    <string name="app_name">AndroidProject</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">World of Chat</string>
    <string name="nav_header_subtitle">TCSS450 Group 4</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="welcome_home">welcomes </string>
    <string name="nav_drawer_connections">Connections</string>
    <string name="nav_drawer_add_connection">Add New Connection</string>
    <string name="nav_drawer_weather">Weather</string>
    <string name="nav_drawer_home">Home</string>
    <string name="nav_drawer_chats">Chat List</string>
    <string name="all_register">REGISTER</string>
    <string name="all_signin">SIGN IN</string>
    <string name="all_login">LOG IN</string>
    <string name="checkbox_stay_logged_in">Stay logged in</string>
    <string name="email_text">Email</string>
    <string name="unam_text">Username</string>
    <string name="firstname_text">First name</string>
    <string name="lname_text">Last name</string>
    <string name="password_text">Password</string>
    <string name="retype_password_text">Retype Password</string>
    <string name="button_start_new_chat">Start New Chat</string>
    <string name="button_view_chat_list">View Chat List</string>
    <string name="button_remove_friend">Remove Friend</string>
    <string name="button_decline_friend">Decline Friend Request</string>
    <string name="button_search">Search</string>
    <string name="button_search_friend">Search Friend</string>
    <string name="button_add_friend">Add Friend</string>
    <string name="button_request_friend">Send Friend Request</string>
    <string name="button_confirm_friend">Confirm Friend Request</string>
    <string name="button_view_friends">Friends List</string>
    <string name="no_connection_text">You have no connections!</string>
    <string name="text_search">Search connection</string>
    <string name="action_logout">Logout</string>
    <string name="verifyCode">Enter The Verification Code</string>
    <string name="EnterCode">Verification Code</string>
    <string name="VerifyButton">Verify</string>
    <string name="chat_message_hint">Enter a message</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_my_locations">MyLocationsActivity</string>
    <string name="title_activity_weather">Weather</string>
    <string name="Resend_Button">Resend</string>


</resources>
