<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home"
            android:title="@string/nav_drawer_home" />
        <item
            android:id="@+id/nav_connections"
            android:icon="@drawable/ic_connection_list"
            android:title="@string/nav_drawer_connections" />
        <item
            android:id="@+id/nav_add_connection"
            android:icon="@drawable/ic_add_connection"
            android:title="@string/nav_drawer_add_connection" />
        <item
            android:id="@+id/nav_chats"
            android:icon="@drawable/ic_chat_list"
            android:title="@string/nav_drawer_chats" />
        <item
            android:id="@+id/nav_weather"
            android:icon="@drawable/ic_weather"
            android:title="@string/nav_drawer_weather" />

    </group>

</menu>